# SlicerPSOIEvaluation

./: .gitignore  CMakeLists.txt  PSOIEvaluation.s4ext  make_extension_package.sh  readme.md
PSOIEvaluation/: BSSOPSIWorkflowModule.py  CMakeLists.txt  GeneralPSOIWorkflowModule.py  LeFortPSIWorkflowModule.py  OcclusionAnalysisModule.py  OrbitaPSIWorkflowModule.py  OrbitalVolumeWorkflowModule.py  OverlapAnalysisModule.py  correct_plan_to_preop_cases.py
PSOIEvaluation/PSOIEvaluationModule/: BSSOPSIWorkflowModule.py  CMakeLists.txt  LeFortPSIWorkflowModule.py
PSOIEvaluation/PSOILib/: helperfunctions.py
PSOIEvaluation/Resources/: report_template.html
PSOIEvaluation/Resources/Docs/: footer.html  styles.css
PSOIEvaluation/Resources/Docs/GeneralPSOIWorkflowModule/: build.sh  navbar.html  psi_analysis_workflow_DE.html  psi_analysis_workflow_DE.md  psi_analysis_workflow_EN.html  psi_analysis_workflow_EN.md
PSOIEvaluation/Resources/Docs/OcclusionAnalysisModule/: build.sh  navbar.html  occlusion_analysis_EN.html  occlusion_analysis_EN.md  template.html
PSOIEvaluation/Resources/Docs/OrbitalVolumeWorkflowModule/: build.sh  navbar.html  orbita_volume_workflow_DE.html  orbita_volume_workflow_DE.md
PSOIEvaluation/Resources/Icons/: LeFort.xcf
PSOIEvaluation/Resources/Translations/: OrbitalVolumeWorkflowModule_de.qm  OrbitalVolumeWorkflowModule_de.ts
PSOIEvaluation/Resources/UI/: BSSOPSIWorkflowModule.ui  GeneralPSOIWorkflowModule.ui  LeFortPSIWorkflowModule.ui  OrbitaPSIWorkflowModule.ui  OrbitalVolumeWorkflowModule.ui
